tests/lean/keyword_tactics.lean.expected.out
keyword_tactics.lean:15:2: error: unify tactic failed, failed to unify
  bool : Type
and
  ℕ : Type
state:
⊢ ℕ → ℕ → ℕ
